--- a/mujoco_cmakeConfig.cmake.in
+++ b/mujoco_cmakeConfig.cmake.in
@@ -1,6 +1,6 @@
 set(_IMPORT_PREFIX "${CMAKE_CURRENT_LIST_DIR}/../../..")
 
-set(MJ_VER @PROJECT_VERSION_MAJOR@@PROJECT_VERSION_MINOR@@PROJECT_VERSION_PATCH@)
+set(MJ_VER @PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@)
 
 add_library(mujoco_cmake::mujoco SHARED IMPORTED)
 
@@ -8,9 +8,9 @@ set_target_properties(mujoco_cmake::mujoco PROPERTIES
   INTERFACE_COMPILE_DEFINITIONS ""
   INTERFACE_COMPILE_OPTIONS ""
   INTERFACE_INCLUDE_DIRECTORIES "${_IMPORT_PREFIX}/include/mujoco"
-  INTERFACE_LINK_LIBRARIES "${_IMPORT_PREFIX}/lib/libglfw.so.3;${_IMPORT_PREFIX}/lib/libglew.so;pthread;GL"
-  IMPORTED_LOCATION "${_IMPORT_PREFIX}/lib/libmujoco${MJ_VER}.so"
-  IMPORTED_SONAME "libmujoco${MJ_VER}.so"
+  INTERFACE_LINK_LIBRARIES "pthread;GL"
+  IMPORTED_LOCATION "${_IMPORT_PREFIX}/lib/libmujoco.so.${MJ_VER}"
+  IMPORTED_SONAME "libmujoco.so.${MJ_VER}"
 )
 
 set(MUJOCO_COMPILER "${_IMPORT_PREFIX}/bin/mujoco_compile")
